projects/media/apps/sonarr/base/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: sonarr
spec:
    type: ClusterIP
    selector:
        app: sonarr
    ports:
    - protocol: TCP
      name: web-interface
      port: 8989
